tests/errors/tc_expr_system_type.lx
@module "main"

pub const main -> fn () int {
    system(42);
    return 0;
}
